--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 body{
-    background-color: white;
+    background-color:#b9dce1;
     color:black;
-    margin: 0;  /* Remove default margin */
-    padding: 0; /* Remove default padding */
-    height: 100vh;  /* Ensure body fills the viewport height */
-    overflow-x: hidden; 
+    height: 100vh;  /* Ensure body fills the viewport height */  
+    width:100%;
+    margin: 0;
+    padding:0;
 }
+
 .dashboard{
     display:flex;
     flex-direction:row;
     height:75px;
-    background:#08d9d6;
     justify-content: space-between;
     align-items: center;
+    overflow-x: hidden;
+    max-width:96%;
+    margin-left: 2%;
 }
 .d_buttons{
     display: flex;
@@ -22,15 +25,14 @@ body{
 }
 .d_button{
     height:40px;
-    width:auto;
+    width:80%;
     padding:5px 20px 5px 20px;
-    box-shadow: 2px 2px 10px #827f7f;
-    color: #eaeaea;
-    background-color: #252A34;
+    background-color: #006996;
+    color: #FBFBFB;
     border:none;
     text-align: center;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 22px;
     margin:5px 25px 5px 25px;
     font-family: "Markazi Text", serif;
     font-optical-sizing: auto;
@@ -39,16 +41,11 @@ body{
     border-radius: 20px;
 }
 .d_button:hover{
-
     cursor: pointer;
 }
 
-.d_button:active{
-    background-color:#FF2E63;
-}
-
 footer p{
-    color:#252A34;
+    color:white;
     font-family: "Markazi Text", serif;
     font-optical-sizing: auto;
     font-weight: 600;
@@ -57,5 +54,5 @@ footer p{
     height:50px;
     width:100%;
     padding: 30px 0px 0px 30px;
-    background-color: #08d9d6;
+    background-color: #006996;
 }
